--- a/ResumenImagenes/main.tex
+++ b/ResumenImagenes/main.tex
@@ -1508,4 +1508,220 @@ Sigue estando la cuestión con los valores de Voronoi en TRACCION.
 \caption{}
 \end{figure}
 
+\section{Nanopartículas}
+
+\subsection{CuZr-B2 creation}
+
+\begin{figure}[H]
+\centering
+\subfloat[Cristal resultante de CuZr (B2) (corte en imágen inferior)]{
+	\includegraphics[width=5cm]{../Figures/Cap_4/B2_FreeBoundaries.png}
+	\label{C4:fg:B2Crystal}}
+\quad
+\subfloat[Energía de cohersión vs tiempo para el cristal de CuZr generado]{
+	\includegraphics[width=10cm]{../Figures/Cap_4/B2CrystalTest_FreeBoundariesSphere.pdf}
+	\label{C4:fg:B2CrystalTest}}
+\caption{Formación del cristal CuZr (B2)}
+\label{C4:fg:B2CuZr_Formation}
+\end{figure}
+
+\subsection{MSD / Cu-FCC}
+
+\begin{figure}[H]
+\centering
+\subfloat[Bajas temperaturas]{
+	\includegraphics[width=10cm]{../Figures/Cap_4/msd10_400_FCC.png}
+	\label{C4:fg:msd10_400_FCC}}
+\\
+\subfloat[Altas temperaturas]{
+	\includegraphics[width=10cm]{../Figures/Cap_4/msd500_800_FCC.png}
+	\label{C4:fg:msd500_800_FCC}}
+\caption[MSD para inclusión de Cu FCC a diferentes temperaturas]{MSD para inclusión de Cu FCC a diferentes temperaturas}
+\label{C4:fg:msd_Cu_FCC}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{../Figures/Cap_4/FCCdiff_shell_comp.png}
+\caption[MSD de la corona esférica y la nanopartícula completa]{MSD de la corona esférica y para la nanopartícula completa (color más claro)}
+\label{C4:fg:FCCdiff_shell_comp}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{../Figures/Cap_4/FCCDiff_vs_temp_fit.png}
+\caption[Difusividad en función de la temperatura (Cu-FCC)]{Difusividad en función de la temperatura para el caso Cu-FCC}
+\label{C4:fg:FCC_diff_vs_T}
+\end{figure}
+
+%\begin{figure}[H]
+%\centering
+%\includegraphics[width=8cm]{../Figures/Chapter4}
+%\caption{}
+%\end{figure}
+
+\subsection{MSD / CuZr-B2}
+
+\begin{figure}[H]
+\centering
+\subfloat[Bajas temperaturas]{
+	\includegraphics[width=10cm]{../Figures/Cap_4/msd10_400_B2.png}
+	\label{C4:fg:msd10_400_B2}}
+\\
+\subfloat[Altas temperaturas]{
+	\includegraphics[width=10cm]{../Figures/Cap_4/msd500_800_B2.png}
+	\label{C4:fg:msd500_800_B2}}
+\caption[MSD para inclusión de CuZr B2 a diferentes temperaturas]{MSD para inclusión de CuZr B2 a diferentes temperaturas}
+\label{C4:fg:msd_CuZr_B2}
+\end{figure}
+
+\subsection{MSD / Heating}
+
+\begin{figure}[H]
+\centering
+\subfloat[Nanopartícula Cu-FCC]{
+	\includegraphics[width=10cm]{../Figures/Cap_4/heatingFCC_500_800.pdf}
+	\label{C4:fg:heating500_800_FCC}}
+\\
+\subfloat[Nanopartícula CuZr-B2]{
+	\includegraphics[width=10cm]{../Figures/Cap_4/heatingB2_500_800.pdf}
+	\label{C4:fg:heating500_800_B2}}
+\caption[MSD para t $ \leq 4 $ ns. Ambas nanopartículas]{MSD para t $ \leq 4 $ ns. Ambas nanopartículas}
+\label{C4:fg:heating_FCC_B2}
+\end{figure}
+
+\subsection{Stress-Strain}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{../Figures/Cap_4/stress_strain_tension_FCC_NoInc.png}
+\caption[vonMises vs deformación en tracción. Inclusión Cu-FCC]{Tensión de vonMises vs deformación para el BMG bajo esfuerzo uniaxial de tracción sin inclusión (línea punteada) y una inclusión de Cu-FCC (línea sólida)}
+\label{C4:fg:fcc_vm_tension}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{../Figures/Cap_4/stress_strain_compression_FCC_NoInc.png}
+\caption[vonMises vs deformación en compresión. Inclusión de Cu-FCC]{Tensión de vonMises vs deformación para el BMG bajo esfuerzo uniaxial de compresión sin inclusión (línea punteada) y una inclusión de Cu-FCC (línea sólida)}
+\label{C4:fg:fcc_vm_compression}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{../Figures/Cap_4/stress_strain_tension_B2_NoInc.png}
+\caption[vonMises vs deformación en tracción. Inclusión de CuZr-B2]{Tensión de vonMises vs deformación para el BMG bajo esfuerzo uniaxial de tracción sin inclusión (línea punteada) y una inclusión de CuZr-B2 (línea sólida)}
+\label{C4:fg:fcc_vm_tension}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{../Figures/Cap_4/stress_strain_compression_B2_NoInc.png}
+\caption[vonMises vs deformación en compresión. Inclusión de CuZr-B2]{Tensión de vonMises vs deformación para el BMG bajo esfuerzo uniaxial de compresión sin inclusión (línea punteada) y una inclusión de CuZr-B2 (línea sólida)}
+\label{C4:fg:fcc_vm_compression}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/NanoParticles/compALL.png}
+\caption{vonMises vs deformación en tracción para una y dos inclusiones y para strain rate = $10^{8}/s$ y $10^{9}/s$. Inclusión de Cu-FCC}
+\end{figure}
+
+\subsection{Snapshots}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/NanoParticles/Snapshots/cuSphereTension_10K_Snapshots.png}
+\caption{Inclusión de Cu-FCC bajo tracción a 10K}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/NanoParticles/cuSphereTension_10K_Snapshot_670_Macla_A.png}
+\caption{Dislocación al traccionar la muestra con nanopartícula de Cu-FCC a 10K (A). Verde: FCC, Rojo: HCP}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/NanoParticles/cuSphereTension_10K_Snapshot_670_Macla_B.png}
+\caption{Dislocación al traccionar la muestra con nanopartícula de Cu-FCC a 10K (B). Verde: FCC, Rojo: HCP}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/NanoParticles/Snapshots/cuSphereTension_200K_Snapshots.png}
+\caption{Inclusión de Cu-FCC bajo tracción a 200K}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/NanoParticles/Snapshots/cuSphereTension_400K_Snapshots.png}
+\caption{Inclusión de Cu-FCC bajo tracción a 400K}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/NanoParticles/Snapshots/cuSphereCompression_10K_Snapshots.png}
+\caption{Inclusión de Cu-FCC bajo compresión a 10K}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/NanoParticles/Snapshots/cuSphereCompression_200K_Snapshots.png}
+\caption{Inclusión de Cu-FCC bajo compresión a 200K}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/NanoParticles/Snapshots/cuSphereCompression_300K_Snapshots.png}
+\caption{Inclusión de Cu-FCC bajo compresión a 300K}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/NanoParticles/Snapshots/B2SphereTension_10K_Snapshots.png}
+\caption{Inclusión de CuZr-B2 bajo tracción a 10K}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/NanoParticles/Snapshots/B2SphereTension_200K_Snapshots.png}
+\caption{Inclusión de CuZr-B2 bajo tracción a 200K}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/NanoParticles/Snapshots/B2SphereTension_300K_Snapshots.png}
+\caption{Inclusión de CuZr-B2 bajo tracción a 300K}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/NanoParticles/Snapshots/B2SphereTension_400K_Snapshots.png}
+\caption{Inclusión de CuZr-B2 bajo tracción a 400K}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/NanoParticles/Snapshots/B2SphereCompression_10K_Snapshots.png}
+\caption{Inclusión de CuZr-B2 bajo compresión a 10K}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/NanoParticles/Snapshots/B2SphereCompression_200K_Snapshots.png}
+\caption{Inclusión de CuZr-B2 bajo compresión a 200K}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/NanoParticles/Snapshots/B2SphereCompression_300K_Snapshots.png}
+\caption{Inclusión de CuZr-B2 bajo compresión a 300K}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=10cm]{Figures/NanoParticles/Snapshots/B2SphereCompression_400K_Snapshots.png}
+\caption{Inclusión de CuZr-B2 bajo compresión a 400K}
+\end{figure}
+
 \end{document}
