--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -12,10 +12,67 @@
 @string{jac ={J. Alloys Compd.}}
 @string{cms ={Comput. Mater. Sci.}}
 @string{nl ={Nano Lett.}}
-@string{nat = {Nature}}
-@string{pnasus = {P. Natl. Acad. Sci. USA}}
-@string{mad = {Mater. Design}}
-@string{natmat = {Nat. Mater.}}
+@string{nat ={Nature}}
+@string{pnasus ={P. Natl. Acad. Sci. USA}}
+@string{mad ={Mater. Design}}
+@string{natmat ={Nat. Mater.}}
+@string{interm ={Intermetallics}}
+@string{srep ={Sci. Rep.}}
+  
+@article{joo15,
+
+  Author = {Joo, S.H. and Pi, D.H. and Setyawan, A.D.H. and Kato, H. and Janecek, M. and Kim, Y.C. and Lee, S. and Kim, H.S.},
+  Journal = srep,
+  OPTVolume = ,
+  OPTPages = {},
+  Title = {Work-hardening induced tensile ductility of bulk metallic glasses via high-pressure torsion},
+  Year = {2015}}
+  
+@article{wang15,
+
+  Author = {Wang, X.D. and Aryal, S. and Zhong, C. and Ching, W.Y. and Sheng, H.W. and Zhang, H. and Zhang, D.X. and Cao, Q.P. and Jiang, J.Z.},
+  Journal = srep,
+  OPTVolume = ,
+  OPTPages = {},
+  Title = {Atomic picture of elastic deformation in a metallic glass},
+  Year = {2015}}
+  
+@article{cao15,
+
+  Author = {Cao, Y. and Xie, X. and Antonaglia, J. and Winiarski, B. and Wang, G. and Shin, Y.C. and Withers, P.J. and Dahmen, K.A. and Liaw, P.K.},
+  Journal = srep,
+  OPTVolume = ,
+  OPTPages = {},
+  Title = {Laser shock peening on Zr-based bulk metallic glass and its effect on plasticity: experiment and modeling},
+  Year = {2015}}
+
+
+@article{gu15,
+
+  Author = {Gu, L. and Xu, L. and Zhang, Q. and Wang, W. and Ikuhara, Y. and Chen, N. and Pan, D. and Louzguine-Luzgin, D. V. and Yao, K.F.},
+  Journal = srep,
+  OPTVolume = ,
+  OPTPages = {},
+  Title = {Direct \textit{in situ} observation of metallic glass deformation by real-time nano-scale indentation},
+  Year = {2015}}
+  
+@article{ma15,
+
+  Author = {Mao, Y. and Li, Ju. and Lo, Y.C. and Qian, X. and Ma, E.},
+  Journal = prb,
+  Volume = 91,
+  Pages = {214103},
+  Title = {Stress-driven crystallization via shear-diffusion transformations in a metallic glass at very low temperatures},
+  Year = {2015}}
+  
+@article{tang15,
+
+  Author = {Tang, C. and Wong, C.H.},
+  Journal = interm,
+  Volume = 58,
+  Pages = {50-55},
+  Title = {Effect of atomic-level stresses on local dynamic and mechanical properties in Cu$_{x}$Zr$_{100-x}$ metallic glasses: A molecular dynamics study},
+  Year = {2015}}
 
 @article{adibi13,
 
@@ -420,7 +477,7 @@ processing and applications of glassy metals},
 @Article{ogata06,
   author = 	 {Ogata, S.},
   title = 	 {Atomistic simulation of shear localization in \textsc{C}u–\textsc{Z}r bulk metallic glass},
-  journal = 	 {Intermetallics},
+  journal = 	 interm,
   year = 	 2006,
   volume =	 14,
   pages = 	 {1033-1037}
