--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -18,6 +18,15 @@
 @string{natmat ={Nat. Mater.}}
 @string{interm ={Intermetallics}}
 @string{srep ={Sci. Rep.}}
+
+@article{Chen14,
+
+  Author = {Chen, S.H. and Chan, K.C. and Wu, F.F. and Xia, L.},
+  Journal = apl,
+  Volume = 104,
+  Pages = {111907},
+  Title = {Pronounced energy absorption capacity of cellular bulk metallic glasses},
+  Year = {2015}}
   
 @article{joo15,
 
