--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -19,70 +19,6 @@
 @string{interm ={Intermetallics}}
 @string{srep ={Sci. Rep.}}
 
-@article{Chen14,
-
-  Author = {Chen, S.H. and Chan, K.C. and Wu, F.F. and Xia, L.},
-  Journal = apl,
-  Volume = 104,
-  Pages = {111907},
-  Title = {Pronounced energy absorption capacity of cellular bulk metallic glasses},
-  Year = {2015}}
-  
-@article{joo15,
-
-  Author = {Joo, S.H. and Pi, D.H. and Setyawan, A.D.H. and Kato, H. and Janecek, M. and Kim, Y.C. and Lee, S. and Kim, H.S.},
-  Journal = srep,
-  OPTVolume = ,
-  OPTPages = {},
-  Title = {Work-hardening induced tensile ductility of bulk metallic glasses via high-pressure torsion},
-  Year = {2015}}
-  
-@article{wang15,
-
-  Author = {Wang, X.D. and Aryal, S. and Zhong, C. and Ching, W.Y. and Sheng, H.W. and Zhang, H. and Zhang, D.X. and Cao, Q.P. and Jiang, J.Z.},
-  Journal = srep,
-  OPTVolume = ,
-  OPTPages = {},
-  Title = {Atomic picture of elastic deformation in a metallic glass},
-  Year = {2015}}
-  
-@article{cao15,
-
-  Author = {Cao, Y. and Xie, X. and Antonaglia, J. and Winiarski, B. and Wang, G. and Shin, Y.C. and Withers, P.J. and Dahmen, K.A. and Liaw, P.K.},
-  Journal = srep,
-  OPTVolume = ,
-  OPTPages = {},
-  Title = {Laser shock peening on Zr-based bulk metallic glass and its effect on plasticity: experiment and modeling},
-  Year = {2015}}
-
-
-@article{gu15,
-
-  Author = {Gu, L. and Xu, L. and Zhang, Q. and Wang, W. and Ikuhara, Y. and Chen, N. and Pan, D. and Louzguine-Luzgin, D. V. and Yao, K.F.},
-  Journal = srep,
-  OPTVolume = ,
-  OPTPages = {},
-  Title = {Direct \textit{in situ} observation of metallic glass deformation by real-time nano-scale indentation},
-  Year = {2015}}
-  
-@article{ma15,
-
-  Author = {Mao, Y. and Li, Ju. and Lo, Y.C. and Qian, X. and Ma, E.},
-  Journal = prb,
-  Volume = 91,
-  Pages = {214103},
-  Title = {Stress-driven crystallization via shear-diffusion transformations in a metallic glass at very low temperatures},
-  Year = {2015}}
-  
-@article{tang15,
-
-  Author = {Tang, C. and Wong, C.H.},
-  Journal = interm,
-  Volume = 58,
-  Pages = {50-55},
-  Title = {Effect of atomic-level stresses on local dynamic and mechanical properties in Cu$_{x}$Zr$_{100-x}$ metallic glasses: A molecular dynamics study},
-  Year = {2015}}
-
 @article{adibi13,
 
 	Author = {Adibi, S. and Sha, Z.D. and Branicio, P.S. and Joshi, S.P. and Liu, Z.S. and Zhang, Y.W.},
@@ -208,6 +144,15 @@ processing and applications of glassy metals},
   pages =	 {5146-5155}
 }
 
+@article{cao15,
+
+  Author = {Cao, Y. and Xie, X. and Antonaglia, J. and Winiarski, B. and Wang, G. and Shin, Y.C. and Withers, P.J. and Dahmen, K.A. and Liaw, P.K.},
+  Journal = srep,
+  Volume = 5,
+  Pages = {10789},
+  Title = {Laser shock peening on Zr-based bulk metallic glass and its effect on plasticity: experiment and modeling},
+  Year = {2015}}
+
 @Article{chen03,
   author = 	 {Chen, M.W. and  Ma, E. and Hemker, K.J. and Sheng, H. and Cheng, X.},
   title = 	 {Deformation twinning in nanocrystalline aluminium},
@@ -216,6 +161,15 @@ processing and applications of glassy metals},
   volume =	 300,
   pages =	 {1275-1277}
 }
+
+@article{Chen14,
+
+  Author = {Chen, S.H. and Chan, K.C. and Wu, F.F. and Xia, L.},
+  Journal = apl,
+  Volume = 104,
+  Pages = {111907},
+  Title = {Pronounced energy absorption capacity of cellular bulk metallic glasses},
+  Year = {2015}}
 
 @Article{chen74,
   author = 	 {Chen, H.},
@@ -333,6 +287,15 @@ processing and applications of glassy metals},
   pages =	 {1947-1953}
 }
 
+@article{gu15,
+
+  Author = {Gu, L. and Xu, L. and Zhang, Q. and Wang, W. and Ikuhara, Y. and Chen, N. and Pan, D. and Louzguine-Luzgin, D. V. and Yao, K.F.},
+  Journal = srep,
+  Volume = 5,
+  Pages = {9122},
+  Title = {Direct \textit{in situ} observation of metallic glass deformation by real-time nano-scale indentation},
+  Year = {2015}}
+
 @Article{guan10,
   author = 	 {Guan, P. and Chen, M. and Egami, T.},
   title = 	 {Stress-\textsc{T}emperature \textsc{S}caling for \textsc{S}teady-\textsc{S}tate \textsc{F}low in \textsc{M}etallic \textsc{G}lasses},
@@ -389,6 +352,15 @@ processing and applications of glassy metals},
   volume =	 95,
   pages =	 195501
 }
+
+@article{joo15,
+
+  Author = {Joo, S.H. and Pi, D.H. and Setyawan, A.D.H. and Kato, H. and Janecek, M. and Kim, Y.C. and Lee, S. and Kim, H.S.},
+  Journal = srep,
+  Volume = 5,
+  Pages = 9660,
+  Title = {Work-hardening induced tensile ductility of bulk metallic glasses via high-pressure torsion},
+  Year = {2015}}
 
 @Article{kuo14,
   author = 	 {Kuo, C.N. and Huang, J.C. and Li, J.B. and Jang, J.S.C. and Lin, C.H. and Nieh, T.G.},
@@ -468,6 +440,15 @@ processing and applications of glassy metals},
 	Title = {Critical length scales for the deformation of amorphous metals containing nanocrystals},
 	Year = {2007}
 }
+
+@article{ma15,
+
+  Author = {Mao, Y. and Li, Ju. and Lo, Y.C. and Qian, X. and Ma, E.},
+  Journal = prb,
+  Volume = 91,
+  Pages = {214103},
+  Title = {Stress-driven crystallization via shear-diffusion transformations in a metallic glass at very low temperatures},
+  Year = {2015}}
 
 @Book{malvern69,
   author = 	 {Malvern, L.},
@@ -595,6 +576,15 @@ processing and applications of glassy metals},
   year = 	 2011
 }
 
+@article{tang15,
+
+  Author = {Tang, C. and Wong, C.H.},
+  Journal = interm,
+  Volume = 58,
+  Pages = {50-55},
+  Title = {Effect of atomic-level stresses on local dynamic and mechanical properties in Cu$_{x}$Zr$_{100-x}$ metallic glasses: A molecular dynamics study},
+  Year = {2015}}
+
 @Article{telford04,
   author = 	 {Telford, M.},
   title = 	 {The case for bulk metallic glass},
@@ -642,6 +632,15 @@ processing and applications of glassy metals},
   volume =	 66,
   pages = 	 {610-613}
 }
+
+@article{wang15,
+
+  Author = {Wang, X.D. and Aryal, S. and Zhong, C. and Ching, W.Y. and Sheng, H.W. and Zhang, H. and Zhang, D.X. and Cao, Q.P. and Jiang, J.Z.},
+  Journal = srep,
+  Volume = 5,
+  Pages = {9184},
+  Title = {Atomic picture of elastic deformation in a metallic glass},
+  Year = {2015}}
 
 @article{wei14,
 	title = "Formation of CuZr-based bulk metallic glass composites containing nanometer-scale B2-CuZr phase through sub-Tg annealing ",
