--- a/ResumenImagenes/main.tex
+++ b/ResumenImagenes/main.tex
@@ -576,6 +576,47 @@ run 50000
 
 \section{Porosidad}
 
+\subsection{Paper}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=10cm]{Figures/spheres.png}
+  \caption{Imágen de las nanopartículas esféricas de material.}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=10cm]{Figures/spheres3.png}
+  \caption{Sinterizado 13\%}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \begin{tabular}{c}
+    \subfloat[Porosidad 13\%, sin deformación]{\includegraphics[width=8cm]{Figures/13_0strain.png}} \\
+    \subfloat[Porosidad 13\%, deformación 5\%]{\includegraphics[width=8cm]{Figures/13_5strain_comp.png}}
+    \subfloat[Porosidad 13\%, deformación 12\%]{\includegraphics[width=8cm]{Figures/13_12strain_comp.png}}\\
+  \end{tabular}
+  \caption{Coloreado de una sección de la muestra con
+  porosidad 13\% según la deformación cortante. El coloreado fue hecho usando Ovito, el color azul siendo 0.1 o menor y el color rojo 0.3 o mayor.
+  (a) Estado inicial de la muestra (b) 5\% deformación por compresión (c) 12\% deformación por compresión.}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \begin{tabular}{c}
+    \subfloat[Porosidad 13\%, sin deformación]{\includegraphics[width=8cm]{Figures/13_0strain.png}} \\
+    \subfloat[Porosidad 13\%, deformación 5\%]{\includegraphics[width=8cm]{Figures/13_6strain_tens.png}}
+    \subfloat[Porosidad 13\%, deformación 12\%]{\includegraphics[width=8cm]{Figures/13_20strain_tens.png}}\\
+  \end{tabular}
+  \caption{Coloreado de una sección de la muestra con
+  porosidad 13\% según la deformación cortante. El coloreado fue hecho usando Ovito, el color azul siendo 0.1 o menor y el color rojo 0.3 o
+  mayor. (a) 6\% deformación por tracción (b) 20\% deformación por tracción.}
+  \label{C5:fg:ss_tens_13}
+\end{figure}
+
+\subsection{Fuera paper}
+
 \begin{figure}[H]
 \centering
 \includegraphics[width=8cm]{Figures/5_0strain.png}
