--- a/main.tex
+++ b/main.tex
@@ -34,6 +34,7 @@
 \usepackage{subfig}
 \usepackage{titlesec}
 \usepackage{array}
+\usepackage{float}
 \newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 \newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 \newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
