Bibliography and abbreviations

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -46,6 +46,15 @@
 	Year = {2013}
 }
 
+@article{brink15,
+	
+	Author = {Brink, T. and Peterlechner, M. and R\"osner, H. and Albe K. and Wilde, G.},
+	Journal = {arXiv:1505.00723},
+	Title = {Influence of crystalline nanoprecipitates on shear band propagation in Cu-Zr based metallic glasses},
+	Year = {2015},
+	url = {http://arxiv.org/abs/1505.00723v2}
+}
+
 @Book{allen87,
   author =	 {Allen, M.P. and Tildesley, D.J.},
   title = 	 {Computer simulation of liquids},
@@ -542,6 +551,15 @@ processing and applications of glassy metals},
   year = 	 2004
 }
 
+@Article{shimizu06,
+  author = 	 {Shimizu, F. and Ogata, S. and Li, J.},
+  title = 	 {Yield point of metallic glass},
+  journal = 	 am,
+  year = 	 2006,
+  volume =	 54,
+  pages = 	 {4293-4298}
+}
+
 @Article{shimizu07,
   author = 	 {Shimizu, F. and Ogata, S. and Li, J.},
   title = 	 {Theory of shear banding in metallic glasses and molecular dynamics calculations},
@@ -719,7 +737,7 @@ processing and applications of glassy metals},
 	Journal = {apl},
 	Volume = {100},
 	Pages = {141901},
-	Title = {Design of ductile bulk metallic glasses by adding ``sof'' atoms},
+	Title = {Design of ductile bulk metallic glasses by adding ``soft'' atoms},
 	Year = {2012}
 }
 
