--- a/main.tex
+++ b/main.tex
@@ -31,6 +31,7 @@
 
 \usepackage[square, comma, sort&compress]{natbib} % Use the natbib reference package - read up on this to edit the reference style; if you want text (e.g. Smith et al., 2012) for the in-text references (instead of numbers), remove 'numbers' 
 \usepackage[spanish]{babel}
+\usepackage[T1]{fontenc}
 \usepackage{subfig}
 \usepackage{titlesec}
 \usepackage{array}
@@ -224,9 +225,12 @@ Las simulaciones fueron financiadas por los proyectos de investigación "06/B235
 \textbf{CSM} & \textbf{C}ooperative \textbf{S}hear \textbf{M}odel \\
 \textbf{EAM} & \textbf{E}mbedded \textbf{A}tom \textbf{M}ethod \\
 \textbf{SB} & \textbf{S}hear \textbf{B}and \\
+\textbf{ESB} & \textbf{E}mbryonic \textbf{S}hear \textbf{B}and \\
+\textbf{ESB} & \textbf{M}ature \textbf{S}hear \textbf{B}and \\
 \textbf{STZ} & \textbf{S}hear \textbf{T}ransformation \textbf{Z}one \\
 \textbf{SVF} & \textbf{S}olid \textbf{V}olume \textbf{F}raction \\
 \textbf{MD} & \textbf{M}olecular \textbf{D}ynamics \\
+\textbf{TEM} & \textbf{T}ransmission \textbf{E}lectron \textbf{M}icroscopy \\
 %\textbf{Acronym} & \textbf{W}hat (it) \textbf{S}tands \textbf{F}or \\
 }
 
