Algunas imagenes de voronoi para nanoparticle

--- a/ResumenImagenes/main.tex
+++ b/ResumenImagenes/main.tex
@@ -1752,6 +1752,116 @@ Sigue estando la cuestión con los valores de Voronoi en TRACCION.
 \caption{vonMises vs deformación en tracción para una y dos inclusiones y para strain rate = $10^{8}/s$ y $10^{9}/s$. Inclusión de Cu-FCC}
 \end{figure}
 
+\subsection{Voronoi}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=15cm]{Figures/NanoParticles/voro_all_10K.png}
+\caption{Número de celdas de voronoi vs strain para tracción a 10K}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=15cm]{Figures/NanoParticles/voro_all_200K.png}
+\caption{Número de celdas de voronoi vs strain para tracción a 200K}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=15cm]{Figures/NanoParticles/voro_all_400K.png}
+\caption{Número de celdas de voronoi vs strain para tracción a 400K}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=15cm]{Figures/NanoParticles/voro_group_10K.png}
+\caption{Número de celdas de voronoi vs strain para tracción a 10K. Región de la nanopartícula.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=15cm]{Figures/NanoParticles/voro_group_200K.png}
+\caption{Número de celdas de voronoi vs strain para tracción a 200K. Región de la nanopartícula.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=15cm]{Figures/NanoParticles/voro_group_400K.png}
+\caption{Número de celdas de voronoi vs strain para tracción a 400K. Región de la nanopartícula.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=15cm]{Figures/NanoParticles/voro_void_10K.png}
+\caption{Número de celdas de voronoi vs strain para tracción a 10K. Región del poro.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=15cm]{Figures/NanoParticles/voro_void_200K.png}
+\caption{Número de celdas de voronoi vs strain para tracción a 200K. Región del poro.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=15cm]{Figures/NanoParticles/voro_void_400K.png}
+\caption{Número de celdas de voronoi vs strain para tracción a 400K. Región del poro.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=15cm]{Figures/NanoParticles/voro_type1_tension.png}
+\caption{Número de celdas de voronoi de tipo 1 vs strain para tracción.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=15cm]{Figures/NanoParticles/voro_type2_tension.png}
+\caption{Número de celdas de voronoi de tipo 2 vs strain para tracción.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=15cm]{Figures/NanoParticles/voro_type3_tension.png}
+\caption{Número de celdas de voronoi de tipo 3 vs strain para tracción.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=15cm]{Figures/NanoParticles/voro_type4_tension.png}
+\caption{Número de celdas de voronoi de tipo 4 vs strain para tracción.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=15cm]{Figures/NanoParticles/voro_type5_tension.png}
+\caption{Número de celdas de voronoi de tipo 5 vs strain para tracción.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=15cm]{Figures/NanoParticles/voro_type6_tension.png}
+\caption{Número de celdas de voronoi de tipo 6 vs strain para tracción.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=15cm]{Figures/NanoParticles/voro_type7_tension.png}
+\caption{Número de celdas de voronoi de tipo 7 vs strain para tracción.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=15cm]{Figures/NanoParticles/voro_type8_tension.png}
+\caption{Número de celdas de voronoi de tipo 8 vs strain para tracción.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=15cm]{Figures/NanoParticles/voro_type9_tension.png}
+\caption{Número de celdas de voronoi de tipo 9 vs strain para tracción.}
+\end{figure}
+
 \subsection{Snapshots}
 
 \begin{figure}[H]
