Trabajo en Capitulo 1

--- a/main.tex
+++ b/main.tex
@@ -69,6 +69,8 @@
   {\normalfont\huge\bfseries\color{black}}
   {\chaptertitlename\ \thechapter}{20pt}{}
 
+\newcommand{\CuZr}{Cu$_{46}$Zr$_{54}$}%Cu46Zr54
+  
 %----------------------------------------------------------------------------------------
 %	TITLE PAGE
 %----------------------------------------------------------------------------------------
@@ -231,6 +233,18 @@ Las simulaciones fueron financiadas por los proyectos de investigación "06/B235
 \textbf{SVF} & \textbf{S}olid \textbf{V}olume \textbf{F}raction \\
 \textbf{MD} & \textbf{M}olecular \textbf{D}ynamics \\
 \textbf{TEM} & \textbf{T}ransmission \textbf{E}lectron \textbf{M}icroscopy \\
+\textbf{OMG} & \textbf{O}h \textbf{M}y \textbf{G}od \\
+\textbf{AKA} & \textbf{A}lso \textbf{K}nown \textbf{A}s \\
+\textbf{AFAIK} & \textbf{A}s \textbf{F}ar \textbf{A}s \textbf{I} \textbf{K}now \\
+\textbf{IMHO} & \textbf{I}n \textbf{M}y \textbf{H}umble \textbf{O}pinion \\
+\textbf{ASAP} & \textbf{A}s \textbf{S}oon \textbf{A}s \textbf{P}ossible \\
+\textbf{FMTYEWTK} & \textbf{F}ar \textbf{M}ore \textbf{T}han \textbf{Y}ou \textbf{E}ver \textbf{W}anted \textbf{T}o \textbf{K}now \\
+\textbf{JTLYK} & \textbf{J}ust \textbf{T}o \textbf{L}et \textbf{Y}ou \textbf{K}now \\
+\textbf{THX} & \textbf{T}hanks \\
+\textbf{FA} & \textbf{F}ranco \textbf{A}rdiani \\
+\textbf{AM} & \textbf{A}ndrés \textbf{M}anelli \\
+\textbf{EMB} & \textbf{E}duardo \textbf{M}arcial \textbf{B}ringa \\
+\textbf{CC} & \textbf{C}laudio \textbf{C}areglio \\
 %\textbf{Acronym} & \textbf{W}hat (it) \textbf{S}tands \textbf{F}or \\
 }
 
