Dos nuevas secciones capitulo 5

--- a/ResumenImagenes/main.tex
+++ b/ResumenImagenes/main.tex
@@ -1544,6 +1544,80 @@ Sigue estando la cuestión con los valores de Voronoi en TRACCION.
 \caption{}
 \end{figure}
 
+NUEVAS
+
+\begin {figure}[H]
+ \centering
+ \begin{tabular}{c c}
+  \subfloat[Velocidad $6.5 \cdot 10^{14} K/s$]{\includegraphics[width=8cm]{Figures/Porosidad/porosidad6_vel14_strain0.png}} &
+  \subfloat[Velocidad $6.5 \cdot 10^{12} K/s$]{\includegraphics[width=8cm]{Figures/Porosidad/porosidad6_vel12_strain0.png}}
+ \end{tabular}
+  \caption[Estado inicial de las muestras, velocidad $10^{12} K/s$.]{Estado inicial de las muestras generadas con velocidades de enfriamiento/calentamiento diferentes, para el caso de porosidad 6\%.}
+\end {figure}
+
+\begin {figure}[H]
+ \centering
+  \begin{tabular}{c c}
+  \subfloat[Velocidad $6.5 \cdot 10^{14} K/s$]{\includegraphics[width=8cm]{Figures/Porosidad/porosidad13_vel14_strain0.png}} &
+  \subfloat[Velocidad $6.5 \cdot 10^{12} K/s$]{\includegraphics[width=8cm]{Figures/Porosidad/porosidad13_vel12_strain0.png}}
+ \end{tabular}
+  \caption[Estado inicial de las muestras, velocidad $10^{12} K/s$.]{Estado inicial de las muestras generadas con velocidades de enfriamiento/calentamiento diferentes, para el caso de porosidad 13\%.}
+\end {figure}
+
+\begin {figure}[H]
+ \centering
+   \begin{tabular}{c c}
+  \subfloat[Compresión]{\includegraphics[width=8cm]{Figures/Porosidad/porosity_SVF_strain_vel12.eps}} &
+  \subfloat[Tracción]{\includegraphics[width=8cm]{Figures/Porosidad/porosity_SVF_strain_vel12_trac.eps}}
+   \end{tabular}
+  \caption[SVF vs. deformación, velocidad $10^{12} K/s$.]{Fracción de volúmen sólido vs deformación. Velocidad de enfriamiento/calentamiento de $6.5 \cdot 10^{12} K/s$}
+\end {figure}
+
+\begin {figure}[H]
+ \centering
+   \begin{tabular}{c c}
+ \subfloat[Compresión]{\includegraphics[width=8cm]{Figures/Porosidad/porosity_PZZ_strain_comp_vel12.eps}} &
+  \subfloat[Tracción]{\includegraphics[width=8cm]{Figures/Porosidad/porosity_PZZ_strain_trac_vel12.eps}}
+   \end{tabular}
+  \caption[Presión en eje de carga vs deformación, velocidad $10^{12} K/s$.]{Presión en eje de carga vs deformación. Velocidad de enfriamiento/calentamiento de $6.5 \cdot 10^{12} K/s$}
+\end {figure}
+
+\begin {figure}[H]
+ \centering
+   \begin{tabular}{c c}
+ \subfloat[Compresión]{\includegraphics[width=8cm]{Figures/Porosidad/porosity_VM_strain_comp_vel12.eps}} &
+  \subfloat[Tracción]{\includegraphics[width=8cm]{Figures/Porosidad/porosity_VM_strain_trac_vel12.eps}}
+   \end{tabular}
+  \caption[Tensión de Von Mises vs deformación, velocidad $10^{12} K/s$.]{Tensión de Von Mises vs deformación. Velocidad de enfriamiento/calentamiento de $6.5 \cdot 10^{12} K/s$}
+\end {figure}
+
+\begin {figure}[H]
+ \centering
+   \begin{tabular}{c c}
+  \subfloat[Compresión]{\includegraphics[width=8cm]{Figures/Porosidad/porosity_2sintering_SVF_comp.eps}} &
+  \subfloat[Tracción]{\includegraphics[width=8cm]{Figures/Porosidad/porosity_2sintering_SVF_trac.eps}}
+   \end{tabular}
+  \caption[SVF vs. deformación, dos sinterizados.]{Nuevo sintering. Fracción de volúmen sólido vs deformación.}
+\end {figure}
+
+\begin {figure}[H]
+ \centering
+   \begin{tabular}{c c}
+ \subfloat[Compresión]{\includegraphics[width=8cm]{Figures/Porosidad/porosity_PZZ_strain_comp_2sintering.eps}} &
+  \subfloat[Tracción]{\includegraphics[width=8cm]{Figures/Porosidad/porosity_PZZ_strain_trac_2sintering.eps}}
+   \end{tabular}
+  \caption[Presión en eje de carga vs deformación, dos sinterizados.]{Nuevo sintering. Presión en eje de carga vs deformación.}
+\end {figure}
+
+\begin {figure}[H]
+ \centering
+   \begin{tabular}{c c}
+ \subfloat[Compresión]{\includegraphics[width=8cm]{Figures/Porosidad/porosity_VM_strain_comp_2sintering.eps}} &
+  \subfloat[Tracción]{\includegraphics[width=8cm]{Figures/Porosidad/porosity_VM_strain_trac_2sintering.eps}}
+   \end{tabular}
+  \caption[Tensión de Von Mises vs deformación, dos sinterizados.]{Nuevo sintering. Tensión de Von Mises vs deformación.}
+\end {figure}
+
 \begin{figure}[H]
 \centering
 \includegraphics[width=9cm]{Figures/Porosidad/Porosidad_newSinter_svf.png}
