Finalizados cap.3 y Apendice D

--- a/main.tex
+++ b/main.tex
@@ -35,6 +35,7 @@
 \usepackage{subfig}
 \usepackage{titlesec}
 \usepackage{array}
+\usepackage{color}
 \usepackage{float}
 \newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 \newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
@@ -326,7 +327,7 @@ Las simulaciones fueron financiadas por los proyectos de investigación "06/B235
 \input{Chapters/Capitulo4} 
 \input{Chapters/Capitulo5} 
 \input{Chapters/Capitulo6} 
-\input{Chapters/Capitulo7} 
+%\input{Chapters/Capitulo7} 
 
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - APPENDICES
@@ -342,6 +343,7 @@ Las simulaciones fueron financiadas por los proyectos de investigación "06/B235
 \input{Appendices/AppendixA}
 \input{Appendices/AppendixB}
 \input{Appendices/AppendixC}
+\input{Appendices/AppendixD}
 
 \addtocontents{toc}{\vspace{2em}} % Add a gap in the Contents, for aesthetics
 
