--- a/Appendices/AppendixD.tex
+++ b/Appendices/AppendixD.tex
@@ -1,9 +1,146 @@
 % Appendix Template
 
-\chapter{ORIGIN PRO} % Main appendix title
+\chapter{SCRIPTS} % Main appendix title
+
+\definecolor{mygreen}{rgb}{0,0.6,0}
+\definecolor{mygray}{rgb}{0.5,0.5,0.5}
+\definecolor{mymauve}{rgb}{0.58,0,0.82}
+
+\lstset{ %
+  backgroundcolor=\color{white},   % choose the background color; you must add \usepackage{color} or \usepackage{xcolor}
+  %basicstyle=\footnotesize,        % the size of the fonts that are used for the code
+  breakatwhitespace=false,         % sets if automatic breaks should only happen at whitespace
+  breaklines=true,                 % sets automatic line breaking
+  captionpos=b,                    % sets the caption-position to bottom
+  commentstyle=\color{mygreen},      % comment style
+  %deletekeywords={...},            % if you want to delete keywords from the given language
+  %escapeinside={\%*}{*)},          % if you want to add LaTeX within your code
+  extendedchars=true,              % lets you use non-ASCII characters; for 8-bits encodings only, does not work with UTF-8
+  frame=single,	                   % adds a frame around the code
+  keepspaces=true,                 % keeps spaces in text, useful for keeping indentation of code (possibly needs columns=flexible)
+  keywordstyle=\color{blue},       % keyword style
+  %otherkeywords={*,...},           % if you want to add more keywords to the set
+  numbers=left,                    % where to put the line-numbers; possible values are (none, left, right)
+  numbersep=5pt,                   % how far the line-numbers are from the code
+  numberstyle=\tiny\color{mygray},   % the style that is used for the line-numbers
+  rulecolor=\color{black},         % if not set, the frame-color may be changed on line-breaks within not-black text (e.g. comments (green here))
+  showspaces=false,                % show spaces everywhere adding particular underscores; it overrides 'showstringspaces'
+  showstringspaces=false,          % underline spaces within strings only
+  showtabs=false,                  % show tabs within strings adding particular underscores
+  stepnumber=2,                    % the step between two line-numbers. If it's 1, each line will be numbered
+  stringstyle=\color{mymauve},       % string literal style
+  tabsize=4,	                   % sets default tabsize to 2 spaces
+  %title=\lstname                   % show the filename of files included with \lstinputlisting; also try caption instead of title
+}
+
 
 \label{AD} % Change X to a consecutive letter; for referencing this appendix elsewhere, use \ref{AppendixX}
 
-\lhead{Anexo D. \emph{ORIGIN PRO}} % Change X to a consecutive letter; this is for the header on each page - perhaps a shortened title
+\lhead{Anexo D. \emph{SCRIPTS}} % Change X to a consecutive letter; this is for the header on each page - perhaps a shortened title
 
-ASD
+\section{Scripts de secuenciación de tareas}
+
+Suele ser útil, por diversas cuestiones, realizar scripts que ejecuten tareas automáticamente. Ya sea debido a la falta de tiempo o la falta de conexión remota, es más eficiente comenzar varias simulaciones de una sóla vez que comenzar varias veces una simulación. Por ello nos hemos servido de scripts que realizan la tarea de comenzar simulaciones por nosotros. Un ejemplo de estos scripts es el siguiente:
+
+\lstinputlisting[language=sh]{Scripts/script_secuenciacion_1}
+
+En este script se indica que se deben ejecutar tres simulaciones en ubicaciones distintas de la computadora, una después de la otra. ¿Qué sucede si, por ejemplo, el script anterior está ejecutándose y algún usuario desea iniciar una nueva simulación? Pueden ocurrir dos cosas:
+
+\begin{itemize}
+ \item que el usuario no esté enterado de que los recursos de la computadora estén siendo utilizados y que inicie una nueva simulación, lo cual hará que las dos instancias de lammps peleen por los recursos, provocando una pérdida de velocidad y, en casos extremos, la interrupción de una de las simulaciones.
+ \item que el usuario sepa de la simulación en curso (ya sea porque le hayan avisado o porque haya revisado manualmente el uso de recursos con un comando como \textit{``ps -e''}) y no inicie su nueva simulación.
+\end{itemize}
+
+En este último caso, el nuevo usuario ha postergado su simulación hasta que la ejecución del script en curso finalice y sólo entonces podrá comenzar su simulación. Pero el nuevo usuario no sabrá con certeza cuándo terminará la ejecución del script para poder comenzar su simulación lo antes posible. Esto puede ser especialmente crítico cuando no se cuente con conexión remota (como para monitorear continuamente en espera de la finalización del script) y el tiempo es un factor relevante (por ejemplo, cuando se recibe permiso para el uso de computadoras de gran poder de procesamiento en institutos de investigación).
+
+Es por esto que se comenzó el desarrollo de un programa que se ejecutaría en segundo plano y que implementara una \textit{cola} de comandos de simulación que pudiese actualizarse dinámicamente. De esta forma, no se pierde tiempo entre simulaciones y cada usuario que quiera realizar una simulación sencillamente debe agregar el comando a la cola.
+
+Esto no es difícil de realizar. La dificultad reside en contemplar los casos por los que un comando pueda no terminar de ejecutarse. Así como no siempre se cuenta con el tiempo ni la conexión como para monitorear la computadora en espera de la finalización de un script, también es poco práctico tener que realizar este monitoreo para verificar que el comando ejecutado haya finalizado correctamente, o relanzar dicho comando en caso de que haya sido interrumpido (debido a, por ejemplo, un corte de luz). Aunque se han hecho avances al respecto, es en esta parte en la que el desarrollo a quedado incompleto.
+
+El siguiente código corresponde al inicio del programa y a la ejecución de los comandos en la cola (lenguaje de programación C++):
+
+\lstinputlisting[language=C++]{Scripts/simuStack/simuStack.cpp}
+
+El código hace uso de tres scripts. Uno de ellos verifica que el estado del programa y otro verifica el estado del último comando.
+
+\lstinputlisting[language=bash]{Scripts/simuStack/Scripts/checkPid}
+\lstinputlisting[language=bash]{Scripts/simuStack/Scripts/updateRestart}
+
+\section{Scripts de simulación}
+
+Para realizar las simulaciones de los capítulos \ref{C4} y \ref{C5} se realizó bastante trabajo en los scripts de LAMMPS, resultando en código más complejo que el introducido en el Apéndice \ref{AA}.
+
+\lstset{ %
+  backgroundcolor=\color{white},   % choose the background color; you must add \usepackage{color} or \usepackage{xcolor}
+  %basicstyle=\footnotesize,        % the size of the fonts that are used for the code
+  breakatwhitespace=false,         % sets if automatic breaks should only happen at whitespace
+  breaklines=true,                 % sets automatic line breaking
+  captionpos=b,                    % sets the caption-position to bottom
+  commentstyle=\color{mygreen},      % comment style
+  language=bash,
+  deletekeywords={type,echo},            % if you want to delete keywords from the given language
+  %escapeinside={\%*}{*)},          % if you want to add LaTeX within your code
+  extendedchars=true,              % lets you use non-ASCII characters; for 8-bits encodings only, does not work with UTF-8
+  frame=single,	                   % adds a frame around the code
+  keepspaces=true,                 % keeps spaces in text, useful for keeping indentation of code (possibly needs columns=flexible)
+  keywordstyle=\color{blue},       % keyword style
+  %otherkeywords={*,...},           % if you want to add more keywords to the set
+  numbers=left,                    % where to put the line-numbers; possible values are (none, left, right)
+  numbersep=5pt,                   % how far the line-numbers are from the code
+  numberstyle=\tiny\color{mygray},   % the style that is used for the line-numbers
+  rulecolor=\color{black},         % if not set, the frame-color may be changed on line-breaks within not-black text (e.g. comments (green here))
+  showspaces=false,                % show spaces everywhere adding particular underscores; it overrides 'showstringspaces'
+  showstringspaces=false,          % underline spaces within strings only
+  showtabs=false,                  % show tabs within strings adding particular underscores
+  stepnumber=2,                    % the step between two line-numbers. If it's 1, each line will be numbered
+  stringstyle=\color{mymauve},       % string literal style
+  tabsize=4,	                   % sets default tabsize to 2 spaces
+  %title=\lstname                   % show the filename of files included with \lstinputlisting; also try caption instead of title
+}
+
+El siguiente código es uno de los usados en el capítulo \ref{C4}. En este se genera un cristal de CuZr tipo B2.
+
+\lstinputlisting{Scripts/script_simulacion_1}
+
+El siguiente código es uno de los usados en el capítulo \ref{C5}. En este se crean partículas esféricas de material y se sinterizan.
+
+\lstinputlisting{Scripts/script_simulacion_2}
+
+\section{Scripts de análisis de datos}
+
+\lstset{ %
+  backgroundcolor=\color{white},   % choose the background color; you must add \usepackage{color} or \usepackage{xcolor}
+  %basicstyle=\footnotesize,        % the size of the fonts that are used for the code
+  breakatwhitespace=false,         % sets if automatic breaks should only happen at whitespace
+  breaklines=true,                 % sets automatic line breaking
+  captionpos=b,                    % sets the caption-position to bottom
+  commentstyle=\color{mygreen},      % comment style
+  %deletekeywords={...},            % if you want to delete keywords from the given language
+  %escapeinside={\%*}{*)},          % if you want to add LaTeX within your code
+  extendedchars=true,              % lets you use non-ASCII characters; for 8-bits encodings only, does not work with UTF-8
+  frame=single,	                   % adds a frame around the code
+  keepspaces=true,                 % keeps spaces in text, useful for keeping indentation of code (possibly needs columns=flexible)
+  keywordstyle=\color{blue},       % keyword style
+  %otherkeywords={*,...},           % if you want to add more keywords to the set
+  numbers=left,                    % where to put the line-numbers; possible values are (none, left, right)
+  numbersep=5pt,                   % how far the line-numbers are from the code
+  numberstyle=\tiny\color{mygray},   % the style that is used for the line-numbers
+  rulecolor=\color{black},         % if not set, the frame-color may be changed on line-breaks within not-black text (e.g. comments (green here))
+  showspaces=false,                % show spaces everywhere adding particular underscores; it overrides 'showstringspaces'
+  showstringspaces=false,          % underline spaces within strings only
+  showtabs=false,                  % show tabs within strings adding particular underscores
+  stepnumber=2,                    % the step between two line-numbers. If it's 1, each line will be numbered
+  stringstyle=\color{mymauve},       % string literal style
+  tabsize=4,	                   % sets default tabsize to 2 spaces
+  %title=\lstname                   % show the filename of files included with \lstinputlisting; also try caption instead of title
+}
+
+Los scripts de análisis de datos son los que más trabajo han recibido y, coincidentemente, los que más trabajo pueden ahorrar. Obtener gráficas \textit{``publication ready''}, realizar fits de datos, calcular polyedros de Voronoi son ejemplos de lo que se puede hacer a través de scripts.
+
+El siguiente código para Gnuplot realiza un fit de los datos en el archivo \textit{``18StressValues\_fit''}, calcula el valor R cuadrado del fit y obtiene un gráfico \textit{``publication ready''}:
+
+\lstinputlisting[language=Gnuplot]{Scripts/script_analisis_1}
+
+El siguiente código en Python para Ovito obtiene la deformación atómica promedio de cada tipo de polyedro de Voronoi:
+
+\lstinputlisting[language=Python]{Scripts/script_analisis_2.py}
