Terminados Capitulos 1,2,3,4,5. OMG. OMG.

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -7,6 +7,7 @@
 @string{apl ={Appl. Phys. Lett.}}
 @string{jap ={J. Appl. Phys.}}
 @string{pml ={Philos. Mag. Lett.}}
+@string{pm ={Philos. Mag.}}
 @string{mc ={Mec. Comput.}}
 @string{mt ={Mater. Trans.}}
 @string{jac ={J. Alloys Compd.}}
@@ -18,6 +19,32 @@
 @string{natmat ={Nat. Mater.}}
 @string{interm ={Intermetallics}}
 @string{srep ={Sci. Rep.}}
+
+@article{Huang13,
+  author = {Huang, X. and Ling, Z. and Dai, L.H.},
+  title = {Cavitation instabilities in bulk metallic glasses},
+  journal = {International Journal of Solids and Structures},
+  volume = {50},
+  number = {9},
+  pages = {1364 - 1372},
+  year = {2013},
+  issn = {0020-7683},
+  doi = {http://dx.doi.org/10.1016/j.ijsolstr.2013.01.011},
+  url = {http://www.sciencedirect.com/science/article/pii/S0020768313000267}
+}
+
+@article{Egami11,
+  author = {Egami, T.},
+  title = {Mechanical failure and glass transition in metallic glasses},
+  journal = jac,
+  volume = {509, Supplement 1},
+  number = {},
+  pages = {S82 - S86},
+  year = {2011},
+  issn = {0925-8388},
+  doi = {http://dx.doi.org/10.1016/j.jallcom.2010.11.007},
+  url = {http://www.sciencedirect.com/science/article/pii/S0925838810027404}
+}
 
 @article{adibi13,
 
@@ -46,9 +73,34 @@
 	Year = {2013}
 }
 
+@article{Ardiani12,
+  author = {Ardiani, F. and Manelli, A. and Ruestes, C. and Careglio, C. and Bringa, E.},
+  title = {Atomistic simulations of amorphous metals in the elastoplastic regime},
+  booktitle = {Mecánica Computacional},
+  year = {2012},
+  pages = {1437-1449},
+  month = {November},
+  volume = {XXXI},
+  editor = {Cardona, A. and Kohan, P.H. and Quinteros, R.D. and Storti, M.A.},
+  organization = {AMCA},
+  issn = {1666-6070}
+}
+
+@article{Ardiani15,
+  author = {F. Ardiani and A. Manelli and C. Ruestes and C. Careglio and E. Bringa},
+  title = {"\uppercase{A}tomistic study of the mechanical properties of a sintered bulk metallic glass (nanoglass)"},
+  year = {2015},
+  organization = {1st Pan-American Congress on Computational Mechanics (PANACM 2015) and XI Argentine Congress on Computational Mechanics (MECOM 2015)},
+  issb = {978-84-943928-2-5},
+  pages = {156-165},
+  volume = {I},
+  editor = {Idelsohn, S. and Sonzogni, V. and Coutinho, A. and Cruchaga, M. and Lew, A. and Cerrolaza, M.},
+  url = {\href{http://congress.cimne.com/panacm2015/frontal/doc/EbookPANACM2015.pdf}{\color{blue}e-book}}
+}
+
 @article{brink15,
 	
-	Author = {Brink, T. and Peterlechner, M. and R\"osner, H. and Albe K. and Wilde, G.},
+	Author = {Brink, T. and Peterlechner, M. and R\"osner, H. and Albe, K. and Wilde, G.},
 	Journal = {arXiv:1505.00723},
 	Title = {Influence of crystalline nanoprecipitates on shear band propagation in Cu-Zr based metallic glasses},
 	Year = {2015},
@@ -171,6 +223,16 @@ processing and applications of glassy metals},
   pages =	 {1275-1277}
 }
 
+@article{Chen11,
+  author = {Chen, Y. and Jiang, M.Q. and Wei, Y.J. and Dai, L.H.},
+  title = {Failure criterion for metallic glasses},
+  year = {2011},
+  journal = pm,
+  pages = {4536-4554},
+  volume = {91},
+  number = {36}
+}
+
 @article{Chen14,
 
   Author = {Chen, S.H. and Chan, K.C. and Wu, F.F. and Xia, L.},
@@ -285,6 +347,17 @@ processing and applications of glassy metals},
 	Pages = {7192},
 	Title = {Dynamics of viscoplastic deformation in amorphous solids},
 	Year = {1998}
+}
+
+@article{Gao14,
+  author={Gao, X.Z. and Müser, M.H. and Kong, L.T. and Li, J.F},
+  title={Atomic structure and energetics of amorphous–crystalline CuZr interfaces: a molecular dynamics study},
+  journal = {Modelling and Simulation in Materials Science and Engineering},
+  volume={22},
+  number={6},
+  pages={065007},
+  url={http://stacks.iop.org/0965-0393/22/i=6/a=065007},
+  year={2014}
 }
 
 @Article{greer95,
@@ -466,11 +539,35 @@ processing and applications of glassy metals},
   year = 	 1969
 }
 
+@article{Manelli15,
+  author = {A. Manelli and F. Ardiani and C. Careglio and E. Bringa},
+  title = {"\uppercase{M}echanical properties of a \uppercase{C}u$_{46}$\uppercase{Z}r$_{54}$ bulk metallic glass with embedded crystalline nano particles"},
+  year = {2015},
+  organization = {PANACM 2015 and MECOM 2015},
+  issb = {978-84-943928-2-5},
+  pages = {166-176},
+  volume = {I},
+  editor = {Idelsohn, S. and Sonzogni, V. and Coutinho, A. and Cruchaga, M. and Lew, A. and Cerrolaza, M.},
+  url = {\href{http://congress.cimne.com/panacm2015/frontal/doc/EbookPANACM2015.pdf}{\color{blue}e-book}}
+}
+
 @Book{miller07,
   author = 	 {Miller, M. and Liaw, P.},
   title = 	 {Introduction to the mechanics of a continuous medium},
   publisher = 	 {Springer Verlag},
   year = 	 2007
+}
+
+@book{mspinningA,
+  author={Fraunhofer},
+  title={Melt Spinning}, note={\href{http://www.ifam.fraunhofer.de/en/Dresden/Sintered_and_Composite_Materials/Nanostrukturierte_Werkstoffe/_jcr_content/stage/image.img.png/Abguss%20Stahl1_gro%C3%9F.1346672927618.png}{\color{blue}Web}},
+  year={2015}
+}
+
+@book{mspinningB,
+  author={Fraunhofer},
+  title={Melt Spinning}, note={\href{http://www.ifam.fraunhofer.de/en/Dresden/Sintered_and_Composite_Materials/Rascherstarrung/_jcr_content/stage/image.img.png/Melt%20Spinning_gro%C3%9F.1346672797613.png}{\color{blue}Web}},
+  year={2015}
 }
 
 @Article{ogata06,
